GitHub action added

--- a/API/fly.toml
+++ b/API/fly.toml
@@ -1,13 +1,10 @@
-# fly.toml app configuration file generated for restoremarko on 2024-09-16T15:31:00+03:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+#fly.toml file generated for restoremarko on 2024-09-17T15:40:58+07:00
 
 app = 'restoremarko'
 primary_region = 'waw'
 
 [build]
-  image = 'marko3107/restore:latest'
+  image = 'marko3107/restoremarko:latest'
 
 [env]
   ASPNETCORE_URLS="http://+:8080"
@@ -15,18 +12,35 @@ primary_region = 'waw'
 
 [experimental]
   allowed_public_ports=[]
-  auto_rollback=true
+  auto_rollback = true
 
-[http_service]
+[[services]]
+  http_checks = []
+  protocol = 'tcp'
   internal_port = 8080
-  force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
-  protocol="tcp"
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  size = 'shared-cpu-1x'
