--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -2,6 +2,7 @@ name: docker-push
 
 on:
   workflow_dispatch:
+  # push:
 
 jobs:
   docker:
@@ -22,4 +23,4 @@ jobs:
         with:
           context: "{{defaultContext}}:API"
           push: true
-          tags: marko3107/restore:latest
+          tags: marko3107/restoremarko:latest
